# ChangeLog for dev-ruby/fast_gettext
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/fast_gettext/ChangeLog,v 1.10 2012/04/08 06:17:25 graaff Exp $

*fast_gettext-0.6.6 (08 Apr 2012)

  08 Apr 2012; Hans de Graaff <graaff@gentoo.org> +fast_gettext-0.6.6.ebuild:
  Version bump.

*fast_gettext-0.6.4-r1 (23 Mar 2012)

  23 Mar 2012; Hans de Graaff <graaff@gentoo.org>
  +fast_gettext-0.6.4-r1.ebuild:
  Fix tests to use the proper interpreter and drop potential jeweler
  dependency. Add ruby19 and drop x86 as a consequence, bug 409399.

*fast_gettext-0.6.4 (18 Dec 2011)

  18 Dec 2011; Hans de Graaff <graaff@gentoo.org> +fast_gettext-0.6.4.ebuild:
  Version bump.

*fast_gettext-0.6.1 (16 Oct 2011)

  16 Oct 2011; Hans de Graaff <graaff@gentoo.org> +fast_gettext-0.6.1.ebuild:
  Version bump. Add bundler as a test dependency since it is actively used
  during testing.

  11 Oct 2011; Hans de Graaff <graaff@gentoo.org> fast_gettext-0.6.0.ebuild:
  Add x86 keyword.

*fast_gettext-0.6.0 (07 Oct 2011)

  07 Oct 2011; Hans de Graaff <graaff@gentoo.org> +fast_gettext-0.6.0.ebuild:
  Version bump.

  07 Oct 2011; Hans de Graaff <graaff@gentoo.org> -fast_gettext-0.5.11.ebuild,
  -fast_gettext-0.5.12.ebuild:
  Remove old versions.

*fast_gettext-0.5.13 (30 Jun 2011)

  30 Jun 2011; Hans de Graaff <graaff@gentoo.org> +fast_gettext-0.5.13.ebuild:
  Version bump.

*fast_gettext-0.5.12 (17 Jun 2011)

  17 Jun 2011; Hans de Graaff <graaff@gentoo.org> +fast_gettext-0.5.12.ebuild:
  Version bump.

*fast_gettext-0.5.11 (09 May 2011)

  09 May 2011; Hans de Graaff <graaff@gentoo.org> +fast_gettext-0.5.11.ebuild,
  +metadata.xml:
  Initial import. New dependency of ruby-activeldap.
