@@ -2,22 +2,17 @@
 Hash: SHA256
 
 DIST fast_gettext-0.5.13.gem 82432 RMD160 72685c6c7732dce33900ef908577025beaa94afd SHA1 a018424da72387581fb7db323faaa4d34d14c811 SHA256 e7d101a5b4cd08ffc141a9ea2ec02ccda3bd44606a7b26eef87aa9d4bbcf94af
-DIST fast_gettext-0.6.0.gem 82432 RMD160 532d47ca5e330dea23a42101583e4e8afa98b3aa SHA1 305fd49bf41c19a35eb411382c87eac296acfeda SHA256 77aab301c53d7c642fc32ce9bb8ce7315d505cbccf0eb07cf4b6405a89cded47
-DIST fast_gettext-0.6.1.gem 82944 RMD160 91568227f4a02db775e1a64bf7cd42402402a09f SHA1 fa05b71d9300a28afb9a7d15b48bb43320dcffa8 SHA256 96f98ad9f3ede40bbe8c64b1ad62bc44fe8955eb5d4775328b90405a4426c08b
 DIST fast_gettext-0.6.4.gem 83456 RMD160 b11f9a610a58767150e9c2eaad9b8fac62751786 SHA1 1f0ec02fcecbe49c65ff710d53154e6efc8536a0 SHA256 03bc2fd6c774268ba8cc13180a5b29a002636a5cefe74cb3dfc20ad18246b26c
 DIST fast_gettext-0.6.6.gem 83456 RMD160 fa50b895087786c934d19f0bf524816de7cf0830 SHA1 ff000c21bfa66617221855814a773a6f6cf7a4be SHA256 a1bedbcbfed16f47cb3f72db6d9ac4c4c319998be2e6cb18f6501bd265d3ba8c
 EBUILD fast_gettext-0.5.13.ebuild 823 RMD160 5f5d5453551fa6f79166700da2bfb28327118e34 SHA1 2bb26545e582772c8231c7bd0d5bb5e75aa6d243 SHA256 d16f267f752ade3cd4cb8cb0888589d641d3f0240662ee7fc6568fdff3f34bb7
-EBUILD fast_gettext-0.6.0.ebuild 879 RMD160 cc84a1bcbf6fb60647b1f437fe3d5e842a4a69e5 SHA1 17f6f81c6dfa14110e8b8d17963ca1f950ef14f7 SHA256 55cecddc18ef8f38ea8486ee57ae71f064166faad8a960aa87cae30bdd4cbeef
-EBUILD fast_gettext-0.6.1.ebuild 888 RMD160 239622425ad30bd4e79c67a5836578421edf80b4 SHA1 c312df63e07d23b228adba610c319e69987e2aef SHA256 78f74e8ada6c37fc8861ad242165619a6d9e21dd8f81ccb69449bbcefe5a089d
-EBUILD fast_gettext-0.6.4-r1.ebuild 1491 RMD160 2f3e0f3a4d983aa3246a9c8596e3169deca93648 SHA1 8a5ebe8495b42d0c6268cf6b3d8ea2651823f50a SHA256 0b3665025f035c272bdbe699e9f4781421fd650460a5fffb361af2179bc1006a
 EBUILD fast_gettext-0.6.4.ebuild 1217 RMD160 4d1cc12f49c5207e39d70bc569d9ec69ef5d9a92 SHA1 b7d042e54fd2a6a9acc8435d2b229ff105c37d8f SHA256 9a642a0425c078fedebd7924195f05aa2561e9b2e6406cca9a594db84de95a9a
 EBUILD fast_gettext-0.6.6.ebuild 1451 RMD160 ad04228819da21a17fd4b474b328028268432982 SHA1 5edbfce63ef75b6bb386b1b1e4754d25ea81e13f SHA256 6acce15fe9d3c6ce8b73956223ae6cc882bde720359adc0c32653466ea305983
-MISC ChangeLog 1753 RMD160 e419299101c1ce44914ddc750e8769cafae64ad3 SHA1 985a97fb55f7b8aa682dc99ee7abfaa679bd87c0 SHA256 ffe4a84d91c3b26a5d56e5322c92d9e2a9bb0d3b2b79ade8a33f156c90f8abf2
+MISC ChangeLog 1916 RMD160 07d768c924c56635ccf08e78275b2c4252907d37 SHA1 fea0321ef053ec92c135c98e7aef62d44a94dd41 SHA256 4f924e13a5f04e207837863b861b25ef07dadecc0c4058315e62181cc3561c8f
 MISC metadata.xml 157 RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 SHA1 8ce15dcc608eeb5616aeec610dc695cbe6f93e02 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk+BLXoACgkQiIP6VqMIqNdiQQD+IxGzDi9/D4hWRssl+o9r6Ore
-GXkg3qU5ooaXo+KTBNABAI4TmEPocZxTw9DD9IyJfjZMNfs+SU3wyxvNEUBQWVUZ
-=v+Jw
+iF4EAREIAAYFAk+uJK8ACgkQiIP6VqMIqNdILwEAgaAIOE66vxFRJwCGTOg9NMMU
+P7jXQlGeEkRyzu+glVAA/R/SXVW8ltH1tDqHl7OnNR0pl9dVvokoCMMIBjesSnhD
+=5RLe
 -----END PGP SIGNATURE-----
