@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/fast_gettext
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/fast_gettext/ChangeLog,v 1.10 2012/04/08 06:17:25 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/fast_gettext/ChangeLog,v 1.11 2012/05/12 08:51:54 graaff Exp $
+
+  12 May 2012; Hans de Graaff <graaff@gentoo.org> -fast_gettext-0.6.0.ebuild,
+  -fast_gettext-0.6.1.ebuild, -fast_gettext-0.6.4-r1.ebuild:
+  Remove old versions.
 
 *fast_gettext-0.6.6 (08 Apr 2012)
 
